--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "sk-ne-cykelpumpar",
+  "name": "cykelpumpar-i-skane",
   "version": "1.0.0",
   "private": true,
   "description": "Skåne Cykelpumpar",
-  "author": "shicks1080",
+  "author": "wise chimp",
   "keywords": [
     "gatsby"
   ],
@@ -29,6 +29,20 @@
     "gatsby-transformer-sharp": "^4.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "ts-node": "^10.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.19",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.5",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "gatsby-plugin-eslint": "^4.0.2",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.5"
   }
 }
