Adding a backup cache to the circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
 
       # Restore our node_modules cache if we've run this before (likely!)
       - restore_cache:
-          key: yarn-dependencies-{{checksum "yarn.lock"}}
+          keys: yarn-dependencies-{{checksum "yarn.lock"}}
 
       # Make sure our project's packages are up to date
       - run: yarn install
@@ -24,7 +24,10 @@ jobs:
       - save_cache:
           paths:
             - ./node_modules
-          key: yarn-dependancies-{{checksum "yarn.lock"}}
+          keys: 
+            - yarn-dependancies-{{checksum "yarn.lock"}}
+            # If the above can't be found then a general cache should be here hopefully!
+            - yarn-dependancies-
 
       - run:
           name: Build Gatsby Site
