--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,7 @@ jobs:
       - save_cache:
           paths:
             - ./node_modules
-          key: 
-            - yarn-dependencies-{{checksum "yarn.lock"}}
+          key: yarn-dependencies-{{checksum "yarn.lock"}}
 
       - run:
           name: Build Gatsby Site
