--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,8 +69,7 @@ jobs:
 workflows:
   build_and_deploy:
     jobs:
-      - build:
-
+      - build
       - deploy:
           filters:
             branches:
