--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
           fingerprints:
             - 7f:b5:e1:1e:a2:fb:e6:38:92:6d:fd:09:14:58:3a:d4
       
-      - run: gh-pages -m 'auto commit [ci skip]' -d public
+      - run: gh-pages -d public
 
 workflows:
   build_and_deploy:
