Adding a type declaration so TS can recognise the css modules.
This took an absolute age, not so much documentation about it. See my Scrum docs.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "noUnusedLocals": false
   },
   "include": [
-    "./src/**/*"
-  ]
+    "./src/**/*",
+    "src/types/css-modules.d.ts"  ]
 }
