--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ts-node": "^10.5.0"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^2.6.2",
     "@types/node": "^17.0.19",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
