--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
 
       - run:
           name: Build Gatsby Site
-          command: CI=true yarn build
+          command: CI=true gatsby build --prefix-paths
       - persist_to_workspace:
           root: ./
           paths:
