--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,10 @@ jobs:
 
       - run:
           name: Build Gatsby Site
-          command: CI=true yarn build --prefix-paths
+           command: |
+            touch .env.production
+            echo "MAPBOX_ACCESS_TOKEN=$MAPBOX_ACCESS_TOKEN" > .env.production
+            CI=true yarn build --prefix-paths
       - persist_to_workspace:
           root: ./
           paths:
