--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,10 +31,12 @@ jobs:
 
       - run:
           name: Build Gatsby Site
-           command: |
+          
+          command: |
             touch .env.production
             echo "MAPBOX_ACCESS_TOKEN=$MAPBOX_ACCESS_TOKEN" > .env.production
-            CI=true yarn build --prefix-paths
+            CI=true yarn build
+
       - persist_to_workspace:
           root: ./
           paths:
