--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "ts-node": "^10.5.0"
   },
   "devDependencies": {
