--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   "dependencies": {
     "@mdx-js/mdx": "v1",
     "@mdx-js/react": "v1",
+    "@wisechimp/wise-chimp-component-library": "^0.1.1",
     "axios": "^0.26.1",
     "gatsby": "^4.7.2",
-    "gatsby-plugin-google-analytics": "^4.7.0",
+    "gatsby-plugin-google-analytics": "^4.9.0",
     "gatsby-plugin-image": "^2.7.0",
     "gatsby-plugin-manifest": "^4.7.0",
     "gatsby-plugin-mdx": "^3.7.1",
