--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "v1",
     "@wisechimp/wise-chimp-component-library": "^0.1.1",
     "axios": "^0.26.1",
+    "framer-motion": "^6.3.2",
     "gatsby": "^4.7.2",
     "gatsby-plugin-google-analytics": "^4.9.0",
     "gatsby-plugin-image": "^2.7.0",
